criação estilos css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="estilos/style.css" />
   </head>
   <body>
-    <h1>Redes Sociais</h1>
+    <main>
+      <section id="telefone"></section>
+    </main>
+    <main>
+      <section id="redes-sociais"></section>
+    </main>
   </body>
 </html>
