criei a tela home

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <main>
-      <section id="telefone"></section>
+      <section id="telefone">
+        <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+      </section>
     </main>
     <main>
       <section id="redes-sociais"></section>
